[gd_scene load_steps=8 format=3 uid="uid://c74xx0jq1wgno"]

[ext_resource type="Script" path="res://jumperEnemy.gd" id="1_1wc4v"]
[ext_resource type="Texture2D" uid="uid://b7sslo6gj1jd6" path="res://assets/graphics/enemy/enemy.png" id="1_mrp6f"]
[ext_resource type="PackedScene" uid="uid://llag2073awvj" path="res://enemy_hitbox.tscn" id="2_6nnpu"]
[ext_resource type="PackedScene" uid="uid://bhih1gx1lxisb" path="res://enemy_key.tscn" id="3_lqpb3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4cpt4"]
size = Vector2(10, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rpfy3"]
size = Vector2(15, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lps0u"]
size = Vector2(16.3265, 12.2449)

[node name="enemy_2" type="RigidBody2D"]
collision_layer = 4
lock_rotation = true
script = ExtResource("1_1wc4v")
lives = 2

[node name="physicsShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4cpt4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_mrp6f")

[node name="EnemyHitbox" parent="." instance=ExtResource("2_6nnpu")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
shape = SubResource("RectangleShape2D_rpfy3")

[node name="EnemyKey" parent="." instance=ExtResource("3_lqpb3")]
position = Vector2(11, 0)

[node name="EnemyKey2" parent="." instance=ExtResource("3_lqpb3")]
position = Vector2(-11, 0)

[node name="TurnaroundArea" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnaroundArea"]
scale = Vector2(0.98, 0.98)
shape = SubResource("RectangleShape2D_lps0u")

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="TurnaroundArea" to="." method="_on_turnaround_area_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
